# haptic_guides

./: .gitignore  LICENSE  README.md
trunk/: CMakeLists.txt  Findhaptic_guides.cmake  ReadMe.txt
trunk/doc/: doxygen_project_name.conf  main.dox
trunk/src/: .CMakeLists.txt.swp  CMakeLists.txt  choose_filter.cpp  choose_filter.h  haptic_guides.cpp  haptic_guides.h  openni_processor.cpp  openni_processor.h  segmentation.cpp  segmentation.h
trunk/src/examples/: CMakeLists.txt  haptic_guides_test.cpp  haptic_guides_test_.cpp
